--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "require": {
         "slim/slim": "4.*",
         "guzzlehttp/psr7": "^1.8",
-        "http-interop/http-factory-guzzle": "^1.0"
+        "http-interop/http-factory-guzzle": "^1.0",
+        "paquettg/php-html-parser": "^3.1",
+        "ext-json": "*"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
